[gd_scene load_steps=23 format=2]

[ext_resource path="res://assests/others/buckets/circle_bucket.png" type="Texture" id=1]
[ext_resource path="res://assests/others/buckets/gray_bucket.png" type="Texture" id=2]
[ext_resource path="res://assests/others/buckets/bubble_bucket.png" type="Texture" id=3]
[ext_resource path="res://assests/others/buckets/glass_bucket.png" type="Texture" id=4]
[ext_resource path="res://scripts/shop_window.gd" type="Script" id=5]
[ext_resource path="res://font/Comfortaa/static/Comfortaa-Bold.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://scripts/not_enough_coins.gd" type="Script" id=7]
[ext_resource path="res://assests/others/buckets/nightstar_bucket.png" type="Texture" id=8]
[ext_resource path="res://assests/others/buckets/colorfiled_bucket.png" type="Texture" id=9]
[ext_resource path="res://assests/others/buckets/gold_bucket.png" type="Texture" id=10]

[sub_resource type="DynamicFont" id=4]
size = 25
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.0588235, 0, 1, 1 )

[sub_resource type="DynamicFont" id=8]
size = 14
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=9]
size = 14
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=10]
size = 14
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=11]
size = 14
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=1]
size = 45
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.235294, 0.521569, 0.00392157, 1 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=12]
size = 30
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0, 0.0313726, 0.576471, 1 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.662745, 0, 0, 1 )

[node name="shop_wondow" type="WindowDialog"]
visible = true
margin_right = 405.0
margin_bottom = 719.0
script = ExtResource( 5 )

[node name="coins_label" type="Label" parent="."]
margin_left = 263.0
margin_top = 62.0
margin_right = 398.0
margin_bottom = 96.0
custom_colors/font_color = Color( 0.0313726, 1, 0, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Coins : 0"
valign = 1

[node name="GridContainer" type="GridContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -197.5
margin_top = -249.5
margin_right = 13.5
margin_bottom = 25.5
rect_scale = Vector2( 1.88801, 1.94344 )
columns = 3

[node name="item" type="VBoxContainer" parent="GridContainer"]
margin_right = 64.0
margin_bottom = 91.0

[node name="icon" type="TextureRect" parent="GridContainer/item"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 2 )

[node name="buy_button" type="Button" parent="GridContainer/item" groups=["buy_button"]]
margin_top = 68.0
margin_right = 64.0
margin_bottom = 91.0
custom_fonts/font = SubResource( 8 )
text = "$100"
icon_align = 1

[node name="item2" type="VBoxContainer" parent="GridContainer"]
margin_left = 68.0
margin_right = 132.0
margin_bottom = 91.0

[node name="icon" type="TextureRect" parent="GridContainer/item2"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 3 )

[node name="buy_button" type="Button" parent="GridContainer/item2" groups=["buy_button"]]
margin_top = 68.0
margin_right = 64.0
margin_bottom = 91.0
custom_fonts/font = SubResource( 9 )
text = "$200"

[node name="item3" type="VBoxContainer" parent="GridContainer"]
margin_left = 136.0
margin_right = 200.0
margin_bottom = 91.0

[node name="icon" type="TextureRect" parent="GridContainer/item3"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 1 )

[node name="buy_button" type="Button" parent="GridContainer/item3" groups=["buy_button"]]
margin_top = 68.0
margin_right = 64.0
margin_bottom = 91.0
custom_fonts/font = SubResource( 10 )
text = "$400"
icon_align = 1

[node name="item4" type="VBoxContainer" parent="GridContainer"]
margin_top = 95.0
margin_right = 64.0
margin_bottom = 186.0

[node name="icon" type="TextureRect" parent="GridContainer/item4"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 4 )

[node name="buy_button" type="Button" parent="GridContainer/item4" groups=["buy_button"]]
margin_top = 68.0
margin_right = 64.0
margin_bottom = 91.0
custom_fonts/font = SubResource( 11 )
text = "$600"
icon_align = 1

[node name="item5" type="VBoxContainer" parent="GridContainer"]
margin_left = 68.0
margin_top = 95.0
margin_right = 132.0
margin_bottom = 186.0

[node name="icon" type="TextureRect" parent="GridContainer/item5"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 10 )

[node name="buy_button" type="Button" parent="GridContainer/item5" groups=["buy_button"]]
margin_top = 68.0
margin_right = 64.0
margin_bottom = 91.0
custom_fonts/font = SubResource( 11 )
text = "$700"
icon_align = 1

[node name="item6" type="VBoxContainer" parent="GridContainer"]
margin_left = 136.0
margin_top = 95.0
margin_right = 200.0
margin_bottom = 186.0

[node name="icon" type="TextureRect" parent="GridContainer/item6"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 8 )

[node name="buy_button" type="Button" parent="GridContainer/item6" groups=["buy_button"]]
margin_top = 68.0
margin_right = 64.0
margin_bottom = 91.0
custom_fonts/font = SubResource( 11 )
text = "$700"
icon_align = 1

[node name="item7" type="VBoxContainer" parent="GridContainer"]
margin_top = 190.0
margin_right = 64.0
margin_bottom = 275.0

[node name="icon" type="TextureRect" parent="GridContainer/item7"]
margin_right = 64.0
margin_bottom = 58.0
texture = ExtResource( 9 )

[node name="buy_button" type="Button" parent="GridContainer/item7" groups=["buy_button"]]
margin_top = 62.0
margin_right = 64.0
margin_bottom = 85.0
custom_fonts/font = SubResource( 11 )
text = "$1000"
icon_align = 1

[node name="shop" type="Label" parent="."]
margin_left = 139.0
margin_right = 263.0
margin_bottom = 51.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "Shop"
align = 1
valign = 1

[node name="not_enough_coins" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.756863 )
script = ExtResource( 7 )

[node name="not_enough_coins_label" type="Label" parent="not_enough_coins"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -191.0
margin_top = -23.0
margin_right = 191.0
margin_bottom = 23.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.0156863, 0.443137, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_fonts/font = SubResource( 3 )
text = "Not Enough Coins"
align = 1
valign = 1

[node name="close_button" type="Button" parent="not_enough_coins"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -49.5
margin_top = 36.5
margin_right = 49.5
margin_bottom = 77.5
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 12 )
custom_styles/hover = SubResource( 14 )
custom_styles/normal = SubResource( 13 )
text = "Close"
icon_align = 1

[node name="Button" type="Button" parent="."]
margin_left = 14.0
margin_top = 663.0
margin_right = 92.0
margin_bottom = 708.0
text = "back"

[connection signal="popup_hide" from="." to="." method="_on_shop_wondow_popup_hide"]
[connection signal="pressed" from="not_enough_coins/close_button" to="not_enough_coins" method="_on_close_button_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
